Fix iOS Safari char splitting: add backface-visibility to .char
3D rotationX on Safari causes subpixel rendering artifacts - chars appear cut in half. backface-visibility: hidden forces GPU compositing and fixes the glitch.

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -44,6 +44,8 @@ img {
 	display: inline-block;
 	line-height: 1em;
 	transform-origin: 50% 50%;
+	backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
 }
 
 .word {
